# csv_median_calculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
examples/: config.toml
examples/input/: level.csv
src/: config_parser.hpp  csv_reader.hpp  main.cpp  median_calculator.hpp
